Fix code issues: remove debug statements, fix unused variables, add View My Loans feature